<resources>
    <string name="app_name">PlayAndroid</string>

    <!--Feature List-->
    <string name="calendar">Calendar</string>
    <string name="clock">Clock</string>
    <string name="alarm_clock">AlarmClock</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="flashlight">Flashlight</string>
    <string name="screenshot">Screenshot</string>
    <string name="mini_browser">MiniBrowser</string>
    <string name="qr_code">QRCode</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="number_attribution">NumberAttribution</string>
    <string name="timer">Timer</string>
    <string name="camera">Camera</string>
    <string name="contact">Contact</string>
    <string name="app_list">AppList</string>
    <string name="system_setting">SystemSetting</string>
    <string name="gank">GankNews</string>

    <string name="default_name">fendoudebb</string>
    <string name="address">https://github.com</string>

    <!--menu-->
    <string name="menu_action_search">Search</string>
    <string name="nav_home_page">HomePage</string>
    <string name="nav_my_collection">Collection</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_theme">Theme</string>
    <string name="nav_share_app">ShareApp</string>
    <string name="nav_other">Other</string>
    <string name="nav_about_author">Author</string>
    <string name="nav_open_source_framework">OpenSourceFramework</string>
    <string name="menu_copy_link">Copy Link</string>
    <string name="menu_go_browser">Go Browser</string>
    <string name="menu_share_link">Share Link</string>

    <!-- System Intent start-->
    <string name="accessibility_settings">AccessibilitySettings</string>
    <string name="add_account">AddAccount</string>
    <string name="airplane_mode_settings">AirplaneModeSettings</string>
    <string name="wireless_settings">WirelessSettings</string>
    <string name="apn_settings">ApnSettings</string>
    <string name="application_development_settings">ApplicationDevelopmentSettings</string>
    <string name="application_settings">ApplicationSettings</string>
    <string name="manage_all_applications_settings">ManageAllApplicationsSettings</string>
    <string name="manage_applications_settings">ManageApplicationsSettings</string>
    <string name="bluetooth_settings">BluetoothSettings</string>
    <string name="data_roaming_settings">DataRoamingSettings</string>
    <string name="device_info_settings">DeviceInfoSettings</string>
    <string name="display_settings">DisplaySettings</string>
    <string name="dream_settings">DreamSettings</string>
    <string name="input_method_settings">InputMethodSettings</string>
    <string name="input_method_subtype_settings">InputMethodSubtypeSettings</string>
    <string name="internal_storage_settings">InternalStorageSettings</string>
    <string name="memory_card_settings">MemoryCardSettings</string>
    <string name="locale_settings">LocaleSettings</string>
    <string name="location_source_settings">LocationSourceSettings</string>
    <string name="network_operator_settings">NetworkOperatorSettings</string>
    <string name="nfc_settings">NfcSettings</string>
    <string name="privacy_settings">PrivacySettings</string>
    <string name="quick_launch_settings">QuickLaunchSettings</string>
    <string name="search_settings">SearchSettings</string>
    <string name="security_settings">SecuritySettings</string>
    <string name="settings">Settings</string>
    <string name="sync_settings">SyncSettings</string>
    <string name="user_dictionary_settings">UserDictionarySettings</string>
    <string name="wifi_ip_settings">WifiIPSettings</string>
    <string name="wifi_settings">WifiSettings</string>

    <string name="nfcsharing_settings">NFCSharingSettings</string>
    <string name="captioning_settings">CaptioningSettings</string>
    <string name="print_settings">PrintSettings</string>
    <string name="sound_settings">SoundSettings</string>
    <string name="date_settings">DateSettings</string>
    <string name="nfc_payment_settings">NFCPaymentSettings</string>
    <string name="extra_account_types">ExtraAccountTypes</string>
    <string name="extra_authorities">ExtraAuthorities</string>
    <string name="extra_input_method_id">ExtraInputMethodId</string>

    <!-- api-21 -->
    <string name="home_settings">HomeSettings</string>
    <string name="cast_settings">CastSettings</string>
    <string name="usage_access_settings">UsageAccessSettings</string>
    <string name="voice_input_settings">VoiceInputSettings</string>

    <!-- api-22 -->
    <string name="battery_saver_settings">BatterySaverSettings</string>
    <string name="notification_listener_settings">NotificationListenerSettings</string>

    <!-- api-23 -->
    <string name="manage_write_settings">ManageWriteSettings</string>
    <string name="ignore_battery_optimization_settings">IgnoreBatteryOptimizationSettings</string>
    <string name="voice_control_airplane_mode">VoiceControlAirplaneMode</string>
    <string name="voice_control_battery_saver_mode">VoiceControlBatterySaverMode</string>
    <string name="voice_control_do_not_disturb_mode">VoiceControlDoNotDisturbMode</string>
    <string name="extra_do_not_disturb_mode_enabled">ExtraDoNotDisturbModeEnabled</string>
    <string name="extra_do_not_disturb_mode_minutes">ExtraDoNotDisturbModeMinutes</string>
    <string name="extra_airplane_mode_enabled">ExtraAirplaneModeEnabled</string>
    <string name="extra_battery_saver_mode_enabled">ExtraBatterySaverModeEnabled</string>

    <!-- api-24 -->
    <string name="vpn_settings">VpnSettings</string>
    <string name="webview_settings">WebviewSettings</string>
    <string name="hard_keyboard_settings">HardKeyboardSettings</string>
    <string name="vr_listener_settings">VrListenerSettings</string>
    <!-- System Intent end-->


    <string name="go_settings">GoSettings</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>

    <string name="missing_permission">MissingPermission</string>
    <string name="write_settings_permission_adjust_brightness_rationale">Adjust the brightness need to modify the system brightness, need to open the write settings permission.</string>
    <string name="auto_brightness">AutoBrightness</string>
    <string name="write_settings_permission">WriteSettingsPermission</string>
    <string name="web_view_empty_link">Link is Empty!</string>
    <string name="web_view_clip_success">Clip Success!</string>
    <string name="web_view_enter_url">Please enter the URL</string>

    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="label_next">Next track</string>


</resources>
