<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/vector_home"
            android:title="@string/nav_home_page"/>
        <item
            android:id="@+id/nav_my_collection"
            android:icon="@drawable/vector_collection"
            android:title="@string/nav_my_collection"/>
        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/vector_tool"
            android:title="@string/nav_tools"/>

    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/vector_theme"
                android:title="@string/nav_theme"/>
            <item
                android:id="@+id/nav_author"
                android:icon="@drawable/vector_author"
                android:title="@string/nav_about_author"/>
            <item
                android:id="@+id/nav_open_source_framework"
                android:icon="@drawable/vector_software"
                android:title="@string/nav_open_source_framework"/>
            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/vector_share"
                android:title="@string/nav_share_app"/>
        </menu>
    </item>

</menu>
